--- a/TradeSystem-Spigot/src/main/resources/languages/CS.yml
+++ b/TradeSystem-Spigot/src/main/resources/languages/CS.yml
@@ -30,6 +30,8 @@ Coin: mince
 Coins: Mince
 PlayerPoint: PlayerPoint
 PlayerPoints: PlayerPoints
+FGToken: "FGToken"
+FGTokens: "FGTokens"
 Token: "Token"
 Tokens: "Tokens"
 ClaimBlock: "ClaimBlock"
