--- a/TradeSystem-Spigot/src/main/resources/languages/POL.yml
+++ b/TradeSystem-Spigot/src/main/resources/languages/POL.yml
@@ -30,6 +30,8 @@ Coin: "Moneta"
 Coins: "Monety"
 PlayerPoint: "PlayerPoint"
 PlayerPoints: "PlayerPoints"
+FGToken: "FGToken"
+FGTokens: "FGTokens"
 Token: "Token"
 Tokens: "Tokens"
 ClaimBlock: "ClaimBlock"
