--- a/TradeSystem-Spigot/src/main/resources/languages/ENG.yml
+++ b/TradeSystem-Spigot/src/main/resources/languages/ENG.yml
@@ -30,6 +30,8 @@ Coin: 'Coin'
 Coins: 'Coins'
 PlayerPoint: PlayerPoint
 PlayerPoints: PlayerPoints
+FGToken: "FGToken"
+FGTokens: "FGTokens"
 Token: "Token"
 Tokens: "Tokens"
 ClaimBlock: "ClaimBlock"
