--- a/TradeSystem-Spigot/src/main/resources/languages/FR.yml
+++ b/TradeSystem-Spigot/src/main/resources/languages/FR.yml
@@ -30,6 +30,8 @@ Coin: "Argent"
 Coins: "Argents"
 PlayerPoint: "PlayerPoint"
 PlayerPoints: "PlayerPoints"
+FGToken: "FGToken"
+FGTokens: "FGTokens"
 Token: "Token"
 Tokens: "Tokens"
 ClaimBlock: "ClaimBlock"
