--- a/TradeSystem-Spigot/src/main/resources/languages/RUS.yml
+++ b/TradeSystem-Spigot/src/main/resources/languages/RUS.yml
@@ -30,6 +30,8 @@ Coin: 'Монета'
 Coins: 'Монет(-ы/-а)'
 PlayerPoint: "PlayerPoint"
 PlayerPoints: "PlayerPoints"
+FGToken: "FGToken"
+FGTokens: "FGTokens"
 Token: "Token"
 Tokens: "Tokens"
 ClaimBlock: "ClaimBlock"
